[package]
name = "password-privacy"
version = "0.1.0"
edition = "2021"
autobins = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "best_anonymity"
path = "bin/best_anonymity/mod.rs"

[dependencies]
clap = { version = "3.2.17", features = ["derive"] }
colored = "2.0.0"
csv = "1.1.6" 
serde = { version = "1.0.144", features = ["derive"] }

hex = "0.4.3" 
sha1 = "0.10.1"
sha2 = "0.10"
sha3 = "0.10.2"
blake2 = "0.10.4"
fsb = "0.1.2"
md2 = "0.10.1"
whirlpool = "0.10.1"
